--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   broken-link-check:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Check for broken links in README.md
     steps:
       - name: Checkout code
