--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,17 +5,17 @@ on:
     - cron: '0 15 * * *' # daily at 3pm
 jobs:
   build-and-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     name: Build Application
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup for JDK 17
+      - name: Setup for JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 21
           java-package: jdk
           cache: maven
 
